# wolf3d-clone-c

./: .gitignore  CMakeLists.txt  README.md  main.c  map.csv
Vec2/: Vec2.c  Vec2.h
assets/: map.csv
src/: CMakeLists.txt  Conventions.h  main.c
src/DDA/: DDA.h
src/InputsBuffer/: InputsBuffer.c  InputsBuffer.h
src/Map/: Map.c  Map.h
src/MiscMath/: MiscMath.c  MiscMath.h
src/Multimedia/: Multimedia.c  Multimedia.h
src/Player/: Player.c  Player.h
src/Ray/: Ray.c  Ray.h
src/StringLib/: StringLib.c  StringLib.h
src/Utilities/: COMMON_HEADERS.h  Conventions.h
src/Utilities/DDA/: DDA.c  DDA.h
src/Utilities/MiscMath/: MiscMath.c  MiscMath.h
src/Utilities/Ray/: Ray.c  Ray.h
src/Utilities/StringLib/: StringLib.c  StringLib.h
src/Utilities/Vec2/: Vec2.c  Vec2.h
src/Vec2/: Vec2.c  Vec2.h
vec2/: vec2.cpp  vec2.h
